# localwhisper

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: DESIGN.md
scripts/: download-models.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs  pipeline.rs  settings.rs
src-tauri/src/inference/: llm.rs  mod.rs  whisper.rs
src/components/: MainView.tsx  Onboarding.tsx  Settings.tsx
