[package]
name = "localwhisper"
version = "0.1.0"
description = "A fully local, privacy-first AI voice dictation app"
authors = ["CYTE LAB"]
license = "MIT"
repository = "https://github.com/CYTE-LAB/localwhisper"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"

# Audio capture
cpal = "0.15"

# STT inference (whisper.cpp binding)
whisper-rs = "0.12"

# LLM inference (llama.cpp binding)
llama-cpp-4 = "0.1"

# Keyboard simulation
enigo = "0.2"

# Device fingerprint for license verification
machine-uid = "0.5"

# Cryptographic signing for license
ed25519-dalek = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
